--- a/src/Componet/Header/Header.css
+++ b/src/Componet/Header/Header.css
@@ -1,5 +1,125 @@
-.header__container{
+.header__container_outer{
     position: sticky;
      top: 0;
-     /* background-color: black; */
+     z-index: 100;
+}
+.header__container_inner{
+  background-color: #1a1a1a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+  gap: 10px;
+  height: 70px;
+  color: white;
+}
+.header__container__logo{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 200px;
+}
+.header__container__logo img{
+  width: 90%;
+  padding-top: 5px;
+  vertical-align: middle;
+}
+.header__container__delivery{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3px;
+  font-weight: bold;
+  padding: 5px;
+}
+.header__container__delivery p {
+  font-size: 10px;
+}
+.header__container__delivery span{
+  font-size: 14px;
+}
+/* search cssss */
+.header__container__search{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  border-radius: 10px;
+  flex: 1;
+  overflow: hidden;
+}
+.header__container__search input {
+  border: 1px solid white;
+  width: 100%;
+  margin-right: -2px;
+  padding: 10px;
+  outline: 1px solid white;
+  font-weight: bold;
+}
+.header__container__search select{
+  background-color: #e6e6e6;
+  border: none;
+  padding: 10px;
+  outline: 1px solid white;
+}
+.header__container__search svg{
+  padding: 10px;
+  background: #febd69;
+  color: #1a1a1a;
+}
+.header__container__search svg:hover {
+  background-color: #d49644;
+  cursor: pointer;
+}
+.header__container__search:focus-within {
+  border: 2px solid rgb(235, 161, 173);
+}
+/* right side csss */
+.header__container_right_side{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 450px;
+  gap: 10px;
+}
+
+.header__container_language{
+  width: 100px;
+  display: flex;
+  padding: 10px;
+}
+.header__container_language img {
+  width: 40%;
+}
+.header__container_language select {
+  background-color: #1a1a1a;
+  border: none;
+  color: white;
+}
+/* order csss */
+
+.header__container_right_side a{
+  text-decoration: none;
+  color: white;
+}
+.header__container_order{
+  font-size: 13px;
+}
+.header__container_cart{
+  position: relative;
+}
+.header__container_cart span{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  top: -1px;
+  font-size: 18px;
+  background-color: #1a1a1a;
+  height: 20px;
+  padding: 2px;
+  border-radius: 20px;
+  left: 14px;
+  color: green;
 }
