--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 :root {
   --primary-color: #febd69;
-  --primary-shade: #e74c3c;
+  --primary-shade: #d49644;
 --remove-color: #d9534f;     
   --header-font: "montserrat";
   --body-text-font: "Poppins";
